--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,3 +1,6 @@
+v.4.1.3
+- Fix: Rewriting the "Begin" and "End" properties did not apply to the "Contains()" operation.
+
 v.4.1.2
 - Fix: "Contains()" method was broken when using the mask length constructor.
 
