--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,3 +1,6 @@
+v.4.2.0
+- Improved the performance of the "GetPrefixLength ()" method.
+
 v.4.1.3
 - Fix: Rewriting the "Begin" and "End" properties did not apply to the "Contains()" operation.
 
