--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+v.6.0.0
+- Update the target frameworks (Drop the support for .NET4.5.2)
+- Fix: Enumerating never breaks if the end of the IPv4 address range is "255.255.255.255" (Issue #80)
+
 v.5.0.0
 - Update the target frameworks (Drop the support for .NET4.5)
 
